update: metpy notebook

--- a/metpy.ipynb
+++ b/metpy.ipynb
@@ -8,20 +8,23 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import logging\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "from datetime import datetime\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import xarray as xr\n",
-    "import meteostat as mt\n",
-    "from netCDF4 import Dataset\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.interpolate import griddata\n",
+    "\n",
     "from metpy.interpolate import interpolate_to_grid\n",
     "\n",
-    "from library.datahub import gen_etopo\n"
+    "from library.commons import check_parameters\n",
+    "from library.datahub import gen_etopo, get_station_data, open_topo\n",
+    "\n",
+    "# config logging\n",
+    "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')"
    ]
   },
   {
@@ -70,7 +73,7 @@
     "SAVE_STATIC_FILES = True\n",
     "\n",
     "# set engine to handle with netcdf files\n",
-    "nc_engine = 'xarray'  # options 'netcdf4' and 'xarray'"
+    "nc_engine = 'netcdf4'  # options 'netcdf4' and 'xarray'"
    ]
   },
   {
@@ -94,33 +97,24 @@
    "execution_count": 3,
    "id": "580c850c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "NC_ENGINE = nc_engine.lower()  # avoid upper case errors\n",
     "VARIABLES = [variables] if not isinstance(variables, list) else variables  # check right type\n",
     "\n",
-    "if NC_ENGINE not in ['netcdf4', 'xarray']:\n",
-    "    raise ValueError(f\"invalid NC_ENGINE @ {NC_ENGINE} choose 'xarray' or 'netcdf4'\")\n",
-    "    \n",
-    "\n",
-    "# Check DOMAIN\n",
-    "if DOMAIN[0] >= DOMAIN[1]:\n",
-    "    raise ValueError(f\"invalid domain, initial longitude {DOMAIN[0]} must be lower than final one {DOMAIN[1]}\")\n",
-    "    \n",
-    "if DOMAIN[2] >= DOMAIN[3]:\n",
-    "    raise ValueError(f\"invalid domain, initial latitude {DOMAIN[2]} must be lower than final one {DOMAIN[3]}\")\n",
-    "    \n",
-    "if RES <= 0:\n",
-    "    raise ValueError(f\"invalid resolution, resolution must be higher than 0, {RES} passed\")\n",
-    "    \n",
-    "# Check date\n",
-    "if START_DATE > END_DATE:\n",
-    "    raise ValueError(f\"invalid date definition, start date {START_DATE} must be higher or equal end date {END_DATE}\")\n",
-    "    \n",
-    "    \n",
-    "# Check if variables are defined\n",
-    "if not VARIABLES:\n",
-    "    raise ValueError(f\"VARIABLES must be defined\")"
+    "# this function will raise an error if the params are not consistents\n",
+    "check_parameters(NC_ENGINE, DOMAIN, RES, START_DATE, END_DATE, VARIABLES)"
    ]
   },
   {
@@ -198,10 +192,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "opening weather station file @ static/stations_-80_-25_-60_15_20240101_20240101.csv\n"
+      "2024-09-30 10:50:24,784 - INFO - getting weather station into domain\n",
+      "2024-09-30 10:50:46,561 - INFO - creating csv with data station @ static/stations_-80_-25_-60_15_20240101_20240101.csv\n"
      ]
     },
     {
@@ -290,12 +285,12 @@
        "</div>"
       ],
       "text/plain": [
-       "         time station  latitude  longitude  elevation  tmax  tmin\n",
-       "0  2024-01-01   69377    4.0700   -73.5500      378.0  31.2  21.0\n",
-       "1  2024-01-01   78792    9.0500   -79.3667       45.0  32.0  24.0\n",
-       "2  2024-01-01   78808    8.9833   -79.5500       66.0  33.0  25.0\n",
-       "3  2024-01-01   78922   14.7667   -60.8833       33.0  28.1  23.7\n",
-       "4  2024-01-01   78925   14.6000   -61.0000        5.0  30.0  22.0"
+       "        time station  latitude  longitude  elevation  tmax  tmin\n",
+       "0 2024-01-01   69377    4.0700   -73.5500      378.0  31.2  21.0\n",
+       "1 2024-01-01   78792    9.0500   -79.3667       45.0  32.0  24.0\n",
+       "2 2024-01-01   78808    8.9833   -79.5500       66.0  33.0  25.0\n",
+       "3 2024-01-01   78922   14.7667   -60.8833       33.0  28.1  23.7\n",
+       "4 2024-01-01   78925   14.6000   -61.0000        5.0  30.0  22.0"
       ]
      },
      "execution_count": 5,
@@ -308,35 +303,16 @@
     "ws_outpath = f\"static/stations_{DOMAIN[0]}_{DOMAIN[1]}_{DOMAIN[2]}_{DOMAIN[3]}_{START_DATE:%Y%m%d}_{END_DATE:%Y%m%d}.csv\"\n",
     "\n",
     "if os.path.exists(ws_outpath):\n",
-    "    print(f\"opening weather station file @ {ws_outpath}\")\n",
+    "    logging.info(f\"opening weather station file @ {ws_outpath}\")\n",
     "    daily_data = pd.read_csv(ws_outpath)\n",
     "    \n",
     "else:\n",
-    "    stations = mt.Stations().bounds((DOMAIN[-1], DOMAIN[0]), (DOMAIN[2], DOMAIN[1])).fetch()\n",
     "\n",
-    "    station_df = []\n",
-    "\n",
-    "    # loop into all stations\n",
-    "    for station_id, row in stations.iterrows():\n",
-    "\n",
-    "        # get data for specified period\n",
-    "        data = mt.Daily(station_id, start=START_DATE, end=END_DATE).fetch()\n",
-    "\n",
-    "        # include weather station info\n",
-    "        data['station'] = station_id\n",
-    "        data['latitude'] = row.latitude\n",
-    "        data['longitude'] = row.longitude\n",
-    "        data['elevation'] = row.elevation\n",
-    "\n",
-    "        # append DataFrame to current weather station\n",
-    "        station_df.append(data)\n",
-    "\n",
-    "    # concat all stations\n",
-    "    daily_data = pd.concat(station_df, axis=0)\n",
-    "    \n",
-    "    print(f\"creating csv with data station @ {ws_outpath}\")\n",
+    "    # get weather station data using meteostat\n",
+    "    daily_data = get_station_data(DOMAIN, START_DATE, END_DATE)\n",
     "    \n",
     "    if SAVE_STATIC_FILES:\n",
+    "        logging.info(f\"creating csv with data station @ {ws_outpath}\")\n",
     "        daily_data.to_csv(ws_outpath)\n",
     "    \n",
     "# dropna and select columns\n",
@@ -349,7 +325,7 @@
     "except KeyError as e:\n",
     "    raise KeyError(f\"there are variables not found in dataframe columns @ {e}\")\n",
     "\n",
-    "    \n",
+    "daily_data['time'] = pd.to_datetime(daily_data['time'])\n",
     "\n",
     "daily_data.head()"
    ]
@@ -405,19 +381,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating topo file for specific domain and resolution @ [-80, -25, -60, 15] - 0.25\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Coordinates: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████| 994/994 [10:46<00:00,  1.54it/s]\n",
-      "2024-09-29 18:20:06,308 - INFO - nan values were found filling then @ fraction of nans 0.06358894183791584\n",
-      "2024-09-29 18:20:13,231 - INFO - file static/ETOPO_lon_-80_-25_lat_-60_15_r0.25.nc created\n"
+      "2024-09-30 10:50:53,525 - INFO - Creating topo file for specific domain and resolution @ [-80, -25, -60, 15] - 0.25\n",
+      "Processing Coordinates: 100%|████████████████████████████████████████████████████| 994/994 [10:46<00:00,  1.54it/s]\n",
+      "2024-09-30 11:01:40,309 - INFO - nan values were found filling them @ fraction of nans 0.06358894183791584\n",
+      "2024-09-30 11:01:45,447 - INFO - file static/ETOPO_lon_-80_-25_lat_-60_15_r0.25.nc created\n"
      ]
     }
    ],
@@ -436,7 +406,7 @@
     "# create etopo file from opentopodata api, it may take some time according to domain and horizontal resolution \n",
     "if not os.path.exists(topo_pathfile):\n",
     "    if SAVE_STATIC_FILES:\n",
-    "        print(f'Creating topo file for specific domain and resolution @ {DOMAIN} - {RES}')\n",
+    "        logging.info(f'Creating topo file for specific domain and resolution @ {DOMAIN} - {RES}')\n",
     "        gen_etopo(grid_lat, grid_lon, topo_pathfile=topo_pathfile)\n",
     "        \n",
     "    else:\n",
@@ -447,31 +417,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "43bbf859",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-09-30 11:01:52,423 - INFO - \n",
+      "Checking boundaries:\n",
+      "    expected domain: [-80, -25, -60, 15]\n",
+      "    lats: (-60.0, 15.0)\n",
+      "    lons: (-80.0, -25.0)\n",
+      "        \n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "    Checking boundaries:\n",
-      "        expected domain: [-80, -25, -60, 15]\n",
-      "        lats: (-60.0, 15.0)\n",
-      "        lons: (-80.0, -25.0)\n",
-      "        \n",
-      "CPU times: user 92.4 ms, sys: 2.98 ms, total: 95.4 ms\n",
-      "Wall time: 94.6 ms\n"
+      "CPU times: user 95.7 ms, sys: 1.14 ms, total: 96.9 ms\n",
+      "Wall time: 93 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7b6f1eea91c0>"
+       "<matplotlib.image.AxesImage at 0x79b50fd16970>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -491,75 +467,14 @@
    "source": [
     "%%time\n",
     "if should_open_topo:\n",
-    "    if NC_ENGINE in ['netcdf4']:\n",
-    "\n",
-    "        #opening topography file\n",
-    "        nc = Dataset(topo_pathfile, 'r')\n",
-    "\n",
-    "        # get coords\n",
-    "        lats_ = nc.variables['y'][:]\n",
-    "        lons_ = nc.variables['x'][:]\n",
-    "\n",
-    "        needs_cut_and_interpol = (lats_ != grid_lat) or (lons_ != grid_lon)\n",
-    "\n",
-    "        if needs_cut_and_interpol:\n",
-    "            # find closest index in topography file\n",
-    "            bounds_lon_idx = list(map(lambda coord: np.argmin(np.abs(coord-lons_)), DOMAIN[:2]))\n",
-    "            bounds_lat_idx = list(map(lambda coord: np.argmin(np.abs(coord-lats_)), DOMAIN[2:]))\n",
-    "\n",
-    "            # lat and lon id bounds into a single list\n",
-    "            domain_idx = bounds_lon_idx + bounds_lat_idx\n",
-    "            # print(domain_idx)\n",
-    "\n",
-    "            # ensure closed interval on right side\n",
-    "            for bound_id, max_idx in zip([1, 3], [len(lons_), len(lats_)]):\n",
-    "                if domain_idx[bound_id] < max_idx:\n",
-    "                    domain_idx[bound_id] += 1    \n",
-    "\n",
-    "\n",
-    "            lats_ = lats_[domain_idx[2]:domain_idx[3]]\n",
-    "            lons_ = lons_[domain_idx[0]:domain_idx[1]]\n",
-    "\n",
-    "            # open topo only in specified domain\n",
-    "            topo = nc.variables['z'][domain_idx[2]:domain_idx[3],\n",
-    "                                     domain_idx[0]:domain_idx[1]]\n",
-    "\n",
-    "        else:\n",
-    "            topo = nc.variables['z'][:]\n",
-    "\n",
-    "\n",
-    "        nc.close()\n",
-    "\n",
-    "        if needs_cut_and_interpol:\n",
-    "            # interpolate topo array to expected resolution\n",
-    "            grid_lon_m, grid_lat_m = np.meshgrid(grid_lon, grid_lat)  # final grid coords\n",
-    "            lon_m, lat_m = np.meshgrid(lons_, lats_)  # topo coords\n",
-    "\n",
-    "            # set topography points\n",
-    "            topo_points = np.array([lat_m.ravel(), lon_m.ravel()]).T\n",
-    "\n",
-    "            # interpol topo to interpolated field resolution\n",
-    "            topo = griddata(topo_points, topo.ravel(), (grid_lat_m, grid_lon_m), method='nearest')\n",
-    "\n",
-    "    elif NC_ENGINE in ['xarray']:\n",
-    "\n",
-    "        ds = xr.open_dataset(topo_pathfile).sel(y=slice(grid_lat[0], grid_lat[-1]),\n",
-    "                                                x=slice(grid_lon[0], grid_lon[-1]))\n",
-    "        ds = ds.interp(y=grid_lat, x=grid_lon, method='nearest')\n",
-    "        topo = ds['z'].values\n",
-    "        lats_ = ds['y'].values\n",
-    "        lons_ = ds['x'].values\n",
-    "\n",
-    "    else:\n",
-    "        raise NotImplementedError(f\"engine {NC_ENGINE} not implemented\")\n",
-    "\n",
+    "    topo, lats_, lons_ = open_topo(topo_pathfile, grid_lat, grid_lon, nc_engine=NC_ENGINE)\n",
     "    \n",
-    "    print(\n",
+    "    logging.info(\n",
     "        f\"\"\"\n",
-    "    Checking boundaries:\n",
-    "        expected domain: {DOMAIN}\n",
-    "        lats: {lats_[0], lats_[-1]}\n",
-    "        lons: {lons_[0], lons_[-1]}\n",
+    "Checking boundaries:\n",
+    "    expected domain: {DOMAIN}\n",
+    "    lats: {lats_[0], lats_[-1]}\n",
+    "    lons: {lons_[0], lons_[-1]}\n",
     "        \"\"\"\n",
     "         )\n",
     "\n",
@@ -585,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "e3bb5694",
    "metadata": {},
    "outputs": [],
@@ -621,63 +536,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "c359baeb",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "starting tmax interpolation\n",
-      "tmax interpolation done\n",
-      "starting tmin interpolation\n",
-      "tmin interpolation done\n"
+      "2024-09-30 11:01:58,752 - INFO - Starting tmax interpolation @ 20240101\n"
      ]
     }
    ],
    "source": [
     "interpolated_ds = {}\n",
-    "\n",
-    "lats_ws = daily_data['latitude'].values\n",
-    "lons_ws = daily_data['longitude'].values\n",
-    "elevation_ws = daily_data['elevation'].values\n",
-    "\n",
+    "times = daily_data['time'].unique()\n",
     "for variable in VARIABLES:\n",
+    "    interpolated_ds[variable] = []\n",
     "    \n",
-    "    print(f\"starting {variable} interpolation\")\n",
-    "    values_ws = daily_data[variable].values\n",
-    "    \n",
-    "    if TEMPERATURE_VARS:\n",
-    "        values_ws = alt2ground(values_ws, elevation_ws)\n",
+    "    for date in times:\n",
     "        \n",
-    "    grid_x, grid_y, grid = interpolate_to_grid(lons_ws,\n",
-    "                                               lats_ws,\n",
-    "                                               values_ws,\n",
-    "                                               **interpol_kwargs)\n",
-    "    \n",
-    "    \n",
-    "    if TEMPERATURE_VARS:\n",
-    "        grid = ground2alt(grid, topo)\n",
+    "        logging.info(f\"Starting {variable} interpolation @ {date:%Y%m%d}\")\n",
     "        \n",
-    "    interpolated_ds[variable] = grid\n",
-    "    \n",
-    "    print(f\"{variable} interpolation done\")"
+    "        df_date = daily_data.loc[daily_data['time'] == date]\n",
+    "        \n",
+    "        values_ws = df_date[variable].values\n",
+    "        lats_ws = df_date['latitude'].values\n",
+    "        lons_ws = df_date['longitude'].values\n",
+    "        elevation_ws = df_date['elevation'].values\n",
+    "\n",
+    "        if TEMPERATURE_VARS:\n",
+    "            values_ws = alt2ground(values_ws, elevation_ws)\n",
+    "\n",
+    "        grid_x, grid_y, grid = interpolate_to_grid(lons_ws,\n",
+    "                                                   lats_ws,\n",
+    "                                                   values_ws,\n",
+    "                                                   **interpol_kwargs)\n",
+    "\n",
+    "\n",
+    "        if TEMPERATURE_VARS:\n",
+    "            grid = ground2alt(grid, topo)\n",
+    "\n",
+    "        interpolated_ds[variable].append(grid) \n",
+    "\n",
+    "        logging.info(f\"Interpolation of {variable} on {date:%Y%m%d} done\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "8351312b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7b6f1ee2ee50>"
+       "<matplotlib.image.AxesImage at 0x782cc52b4c40>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -695,13 +612,13 @@
     }
    ],
    "source": [
-    "plt.imshow(interpolated_ds[variable][::-1])"
+    "plt.imshow(interpolated_ds[variable][0][::-1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2ac04be",
+   "id": "158d9435",
    "metadata": {},
    "outputs": [],
    "source": []
