--- a/metpy.ipynb
+++ b/metpy.ipynb
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c359baeb",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-09-30 11:01:58,752 - INFO - Starting tmax interpolation @ 20240101\n"
+      "2024-09-30 11:01:58,752 - INFO - Starting tmax interpolation @ 20240101\n",
+      "2024-09-30 11:02:08,286 - INFO - Interpolation of tmax on 20240101 done\n",
+      "2024-09-30 11:02:08,287 - INFO - Starting tmin interpolation @ 20240101\n",
+      "2024-09-30 11:02:17,046 - INFO - Interpolation of tmin on 20240101 done\n"
      ]
     }
    ],
@@ -584,17 +587,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "8351312b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x782cc52b4c40>"
+       "<matplotlib.image.AxesImage at 0x79b5103654c0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -618,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "158d9435",
+   "id": "59b5a9c7",
    "metadata": {},
    "outputs": [],
    "source": []
