fix: adding monkey patch to ensure a result from natural neighbor method

--- a/pykrige.ipynb
+++ b/pykrige.ipynb
@@ -592,7 +592,7 @@
     "\n",
     "#### 6. Applications\n",
     "\n",
-    "Ordinary Kriging is commonly used in fields such as geostatistics, environmental science, hydrology, and meteorology. It is especially useful for creating smooth, continuous surfaces from sparse and irregularly spaced data points, such as estimating temperature, susoil properties, or pollution levels.\n",
+    "Ordinary Kriging is commonly used in fields such as geostatistics, environmental science, hydrology, and meteorology. It is especially useful for creating smooth, continuous surfaces from sparse and irregularly spaced data points, such as estimating temperature, pressure, soil properties, or pollution levels.\n",
     "\n",
     "### Summary of Steps\n",
     "\n",
